resolve error swagger documentation
