# docs/swagger.json
@@ -51,7 +51,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/users.responseValidateUser"
+                            "$ref": "#/definitions/users.resTraceability"
                         }
                     }
                 }
@@ -141,6 +141,29 @@
         }
     },
     "definitions": {
+        "traceability.Traceability": {
+            "type": "object",
+            "properties": {
+                "action": {
+                    "type": "string"
+                },
+                "created_at": {
+                    "type": "string"
+                },
+                "description": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "updated_at": {
+                    "type": "string"
+                },
+                "user_id": {
+                    "type": "string"
+                }
+            }
+        },
         "users.UserValidation": {
             "type": "object",
             "properties": {
@@ -288,6 +311,29 @@
                 },
                 "data": {
                     "$ref": "#/definitions/users.UserValidation"
+                },
+                "error": {
+                    "type": "boolean"
+                },
+                "msg": {
+                    "type": "string"
+                },
+                "type": {
+                    "type": "integer"
+                }
+            }
+        },
+        "users.resTraceability": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "integer"
+                },
+                "data": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/traceability.Traceability"
+                    }
                 },
                 "error": {
                     "type": "boolean"
